# nalang_project

./: .gitignore
.github/workflows/: agent.yml  backend.yml  frontend.yml
agent/: agent.py  pyproject.toml
front/: index.html  package-lock.json  package.json
front/src/: App.tsx  main.tsx
front/src/apis/: config.ts
front/src/hooks/: useCallWebSocket.ts  useLiveKit.ts
front/src/layout/: FooterNavigationBar.tsx  Landing.tsx
front/src/pages/: Chat.tsx  Community.tsx  Feed.tsx  Home.tsx  Landing.tsx  Profile..tsx
front/src/routes/: router.tsx
front/src/stores/: store.ts
front/src/utils/: axiosInstance.ts
livekit-docker/: docker-compose.yml
server/: init_seed.py  requirements.txt
server/alembic/: env.py
server/alembic/versions/: 024105110a58_call_history_datetime.py  08ce3734abfd_init_tables.py  105cc2536a40_migration_test.py  2633f3cd225d_create_tables.py  2d28cd843cfd_add_languages_and_language_translations.py  5a0cc03bc2db_test.py  5d86c0f7e153_timezone.py  6d985b8a2367_user_table.py  8b44d6aef59c_add_languages_and_language_translations.py  97756d18ea20_init.py  a4609fd14bff_timezone1.py  c41f0af8af4e_test.py  d5a1dc523412_timezone1.py  e89f3165c067_switch_to_orm_based_user_interest_user_.py  e8a054ae0285_create_users_table.py  f301475ab85e_test.py  fe0067e009c1_add_interests_and_interest_translations.py
server/app/: main.py
server/app/api/: api_v1.py
server/app/auth/: routes.py
server/app/common/: base_class.py  db.py  metadata.py  redis.py
server/app/core/: config.py  deps.py  security.py  utils.py
server/app/db/: database.py  (+2 more)
(+61 files in other folders)
